--- a/scss/all/_header.scss
+++ b/scss/all/_header.scss
@@ -55,6 +55,185 @@ header {
              display: flex;
              align-items: center;
              justify-content: space-between;
+
+             h1{
+                font-family: Inter;
+                font-size: 24px;
+                font-weight: 700;
+                line-height: 24px; 
+                letter-spacing: 0.72px;
+             }
+
+             &--titl{
+                display: flex;
+                align-items: center;
+                gap: 48px;
+                list-style: none;
+
+                &--list{
+
+                    &-link{
+                        text-decoration: none;
+                        color: #000;
+                        text-align: center;
+                        font-family: Poppins;
+                        font-size: 16px;
+                        font-weight: 400;
+                        line-height: 24px;
+                        padding-bottom: 1px;
+                        border-bottom: 1px solid transparent;
+                        transition: all .2s linear;
+
+
+                        &:hover{
+                            border-bottom: 1px solid #7a7a7a; 
+                            transition: all .2s linear; 
+                        }
+                    }
+                }
+             }
+
+             &--right{
+                display: flex;
+                align-items: center;
+                gap: 24px;
+
+                &--input{
+                    display: flex;
+                    padding: 7px 12px 7px 20px;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 10px;
+                    border-radius: 4px;
+                    background:  #F5F5F5;
+
+                    input{
+                        border: none;
+                        background: transparent;
+                    }
+                }
+
+                &--icons{
+                    display: flex;
+                    align-items: center;
+                    gap: 16px;
+
+                    &--icon1{
+                        width: 38px;
+                        height: 38px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border-radius: 50%;
+                        padding-top: 5px;
+                        background: transparent;
+                        transition: all .2s linear;
+
+                        &:hover{
+                            background: red; 
+                            transition: all .2s linear;
+
+                            a{
+                                svg {
+                                   path{
+                                     stroke: #FAFAFA;
+                                   }
+                                }
+                            }
+                        }
+                    }
+                    &--icon2{
+                        width: 38px;
+                        height: 38px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border-radius: 50%;
+                        padding-top: 5px;
+                        background: transparent;
+                        transition: all .2s linear;
+
+                        &:hover{
+                            background: red; 
+                            transition: all .2s linear;
+
+                            a{
+                                svg {
+                                   path{
+                                     stroke: #FAFAFA;
+                                   }
+                                }
+                            }
+                        }
+                    }
+                    &--icon3{
+                        width: 38px;
+                        height: 38px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border-radius: 50%;
+                        padding-top: 5px;
+                        background: transparent;
+                        transition: all .2s linear;
+                        position: relative;
+
+                        &--titil{
+                            display: none;
+                            width: 224px;
+                            position: absolute;
+                            bottom: -225px;
+                            right: 0;
+                            padding: 18px 12px 10px 20px;
+                            border-radius: 4px;
+                            background: rgb(177,192,189);
+                            background: linear-gradient(127deg, rgba(177,192,189,0.9276960784313726) 21%, rgba(134,134,145,0.8940826330532213) 66%);
+                            list-style: none;
+
+                            &--list{
+                                display: flex;
+                                align-items: center;
+                                gap: 16px; 
+                                background: transparent;
+                                margin-bottom: 13px;
+
+                                a{   
+                                    display: inline-block;
+                                    text-decoration: none;
+                                    color: #FAFAFA;
+                                    font-family: Poppins;
+                                    font-size: 14px;
+                                    font-weight: 400;
+                                    line-height: 21px;
+                                    border-bottom: 1px solid transparent;
+                                }
+
+                                &:hover{
+                                    background: rgb(141, 141, 141);
+                                    a{
+                                        color: #a5a5a5;
+                                        border-bottom: 1px solid #a5a5a5;
+                                    } 
+                                }
+                            }
+                                
+                        }
+
+                        &:hover{
+                            background: red; 
+                            transition: all .2s linear;
+
+                            a{
+                                svg {
+                                   path{
+                                     stroke: #FAFAFA;
+                                   }
+                                }
+                            }
+                        }
+                    }
+                }
+             }
         }
     }
 }
