--- a/css/style.css
+++ b/css/style.css
@@ -614,6 +614,256 @@ main {
   border-bottom: 1px solid #FAFAFA;
 }
 
+#today {
+  width: 100%;
+}
+#today .today__wrapper--top {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+#today .today__wrapper--top h1 {
+  width: 20px;
+  height: 40px;
+  background: #DB4444;
+  border-radius: 3px;
+}
+#today .today__wrapper--top p {
+  color: #DB4444;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+}
+#today .today__wrapper--midle {
+  display: flex;
+  align-items: end;
+  gap: 87px;
+  margin-bottom: 31px;
+  position: relative;
+}
+#today .today__wrapper--midle h1 {
+  color: #000;
+  font-family: Inter;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 48px;
+  letter-spacing: 1.44px;
+  margin: 0;
+}
+#today .today__wrapper--midle--icon {
+  display: block;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+#today .today__wrapper--midle--icon span {
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  background: #F5F5F5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s linear;
+}
+#today .today__wrapper--midle--icon span:hover {
+  background: #E07575;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+#today .today__wrapper--midle--icon span:hover svg > path {
+  stroke: #FFF;
+}
+#today .today__wrapper--midle--soat {
+  display: flex;
+  align-items: center;
+  gap: 17px;
+}
+#today .today__wrapper--midle--soat p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 18px;
+}
+#today .today__wrapper--midle--soat h1 span {
+  color: #E07575;
+  margin-left: 17px;
+}
+#today .today__wrapper--cards {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  overflow: hidden;
+  overflow-x: scroll;
+}
+#today .today__wrapper--cards--card {
+  width: 270px;
+}
+#today .today__wrapper--cards--card--btn {
+  width: 270px;
+  height: 41px;
+  flex-shrink: 0;
+  border-radius: 0px 0px 4px 4px;
+  background: #000;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  position: absolute;
+  top: 209px;
+  display: none;
+}
+#today .today__wrapper--cards--card:hover {
+  cursor: pointer;
+}
+#today .today__wrapper--cards--card:hover .today__wrapper--cards--card--btn {
+  display: block;
+}
+#today .today__wrapper--cards--card--top {
+  position: relative;
+  width: 270px;
+  height: 250px;
+  border-radius: 4px;
+  background: #F5F5F5;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#today .today__wrapper--cards--card--top p {
+  display: inline-block;
+  padding: 4px 12px;
+  gap: 10px;
+  border-radius: 4px;
+  color: #FFF;
+  background: #DB4444;
+  position: absolute;
+  top: 12px;
+  left: 12px;
+}
+#today .today__wrapper--cards--card--top--spen1 {
+  width: 34px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #FFF;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
+#today .today__wrapper--cards--card--top--spen1:hover {
+  cursor: pointer;
+  background: #DB4444;
+}
+#today .today__wrapper--cards--card--top--spen1:hover svg path {
+  stroke: #FFF;
+}
+#today .today__wrapper--cards--card--top--spen2 {
+  width: 34px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #FFF;
+  position: absolute;
+  top: 54px;
+  right: 12px;
+}
+#today .today__wrapper--cards--card--top--spen2:hover {
+  cursor: pointer;
+  background: #DB4444;
+}
+#today .today__wrapper--cards--card--top--spen2:hover svg path {
+  stroke: #FFF;
+}
+#today .today__wrapper--cards--card--botton {
+  margin-top: 16px;
+}
+#today .today__wrapper--cards--card--botton h2 {
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+}
+#today .today__wrapper--cards--card--botton--h3 {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin: 8px 0;
+}
+#today .today__wrapper--cards--card--botton--h3--span1 {
+  color: #DB4444;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+#today .today__wrapper--cards--card--botton--h3--span2 {
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  opacity: 0.5;
+  text-decoration: line-through;
+}
+#today .today__wrapper--cards--card--botton--p {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 10px;
+}
+#today .today__wrapper--cards--card--botton--p--span {
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 21px;
+  opacity: 0.5;
+}
+#today .today__wrapper--btn {
+  padding: 76px 0px 76px 468px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+}
+#today .today__wrapper--btn button {
+  display: inline-flex;
+  padding: 16px 48px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  background: #DB4444;
+  color: #FAFAFA;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  border: none;
+  transition: all 0.2s linear;
+}
+#today .today__wrapper--btn button:hover {
+  cursor: pointer;
+  background: transparent;
+  color: #000;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  transition: all 0.2s linear;
+}
+
 footer {
   width: 100%;
 }/*# sourceMappingURL=style.css.map */
