--- a/scss/all/_intro.scss
+++ b/scss/all/_intro.scss
@@ -73,7 +73,8 @@
                         }
 
                         h1{
-                            color: var(--Text, #FAFAFA);
+                            width: 294px;
+                            color:  #FAFAFA;
                             font-family: Inter;
                             text-align: start;
                             font-size: 44px;
