--- a/scss/all/_layout.scss
+++ b/scss/all/_layout.scss
@@ -3,4 +3,6 @@
 @import "./main";
 @import "./intro";
 @import "./section-todays";
+@import "./section-cotegores";
+@import "./section-month";
 @import "./footer";
