--- a/scss/all/_layout.scss
+++ b/scss/all/_layout.scss
@@ -5,4 +5,6 @@
 @import "./section-todays";
 @import "./section-cotegores";
 @import "./section-month";
+@import "./acardyon";
+@import "./section-products";
 @import "./footer";
